--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap": "^1.2.1"
+    "angular-bootstrap": "^1.2.1",
+    "angular-local-storage": "^0.2.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
