--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.2.1",
-    "angular-local-storage": "^0.2.5"
+    "angular-local-storage": "^0.2.5",
+    "angular-google-maps": "^2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
