--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.2.1",
     "angular-local-storage": "^0.2.5",
-    "angular-google-maps": "^2.3.2"
+    "angular-google-maps": "^2.3.2",
+    "angular-spinkit": "^0.3.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
